--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Website Title</title>
     <!-- put your CSS and JS links or code here -->
-    <link rel="stylesheet" type="text/CSS" href="CSS/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
 
   <body>
